# OSSP

./: README.md
src/: CMakeLists.txt  configHandler.c  configHandler.h  discordrpc.c  discordrpc.h  main.c
src/libopensubsonic/: endpoint_ping.c  endpoint_ping.h  httpclient.c  httpclient.h  utils.c
src/player/: playQueue.cpp  playQueue.hpp  player.c  scrobbler_lastFm.c  scrobbler_lastFm.h
